Archive2/f1/e35849a3818ecc/output
main.cpp: In instantiation of 'bool client::parse_numbers(Iterator, Iterator, std::vector<client::double_w_pos>&) [with Iterator = __gnu_cxx::__normal_iterator<char*, std::basic_string<char> >]':
main.cpp:61:52:   required from here
main.cpp:45:105: error: invalid cast from type 'boost::phoenix::actor<boost::phoenix::composite<boost::phoenix::minus_eval, boost::fusion::vector<boost::spirit::argument<0>, boost::phoenix::value<__gnu_cxx::__normal_iterator<char*, std::basic_string<char> > >, boost::fusion::void_, boost::fusion::void_, boost::fusion::void_, boost::fusion::void_, boost::fusion::void_, boost::fusion::void_, boost::fusion::void_, boost::fusion::void_> > >' to type 'size_t {aka long unsigned int}'
                                                                                 (size_t)(qi::_1 - first)))] % ','
                                                                                                         ^
